@@ -1,1 +1,1 @@
-rbwheel-d	Demos on the Barrow Wheel distribution
+rbwheel-ics	Barrow Wheel distribution with ICS
